fix navigaiton view button, custom loader z-index

--- a/src/sass/custom-loader.sass
+++ b/src/sass/custom-loader.sass
@@ -51,7 +51,6 @@
 @keyframes orbit
   0%
     opacity: 1
-    z-index: 99
     transform: rotate(180deg)
     animation-timing-function: ease-out
   7%
