--- a/src/sass/navigation-view.sass
+++ b/src/sass/navigation-view.sass
@@ -43,6 +43,7 @@ $nav-view-max-width: 280px
     background-color: $background
     border-color: $background
     cursor: pointer
+    outline-style: none
   // Static type
   &.is-static
     border-right: 1px solid rgba(0,0,0,0.15)
@@ -59,8 +60,7 @@ $nav-view-max-width: 280px
       opacity: 0
     & > .button
       left: 0!important
-      padding: 0.33em 0
-      width: $nav-view-min-width
+      padding: 0.33em calc(1.5em - 1px)
     &.is-active
       width: 100%
       box-shadow: 0 0 25px rgba(0,0,0,0.75)
